# nx

./: .gitignore  Makefile  assertlib.py  dim_hour_generator.py  dim_minute_generator.py  dim_value_bin_generator.py  docker-compose.yml  nx_datastores.py  nx_services.py  nx_utils.py  pyproject.toml  required_dirs.txt  runbook.txt  shell.nix
config/: ingest_reddit_data.yaml
sql/: nx_ddl.sql  truncate_dimension_tables.sql
template_files/: mkdb.sql.tpl  mkdbauser.sql.tpl  perms.sql.tpl
